modification hero a _titres

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             </div>
         </div>
 
-        <div class="hero">
-            <div class="hero__content">
-                <h1 class="hero__title">Réservez le menu qui vous convient</h1>
-                <p class="hero__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+        <div class="titres">
+            <div class="titres__content">
+                <h1 class="titres__title">Réservez le menu qui vous convient</h1>
+                <p class="titres__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
             </div>
             <button class="button">
                 <span class="button__text">Explorer nos restaurants</>
