--- a/Lanoteenchantee.html
+++ b/Lanoteenchantee.html
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -77,7 +77,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -111,7 +111,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -133,7 +133,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -150,7 +150,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -168,7 +168,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -191,7 +191,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -208,7 +208,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -225,7 +225,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
