--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -57,7 +57,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -74,7 +74,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -93,7 +93,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -115,7 +115,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -133,7 +133,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -150,7 +150,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -171,7 +171,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -189,7 +189,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -207,7 +207,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
