--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -60,7 +60,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -79,7 +79,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -96,7 +96,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -121,7 +121,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -138,7 +138,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -179,7 +179,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -196,7 +196,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -213,7 +213,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
