--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -77,7 +77,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -116,7 +116,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -133,7 +133,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -150,7 +150,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -171,7 +171,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -188,7 +188,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
@@ -205,7 +205,7 @@
                                 </div>
                                 <div class="box__contents__right">
                                     <span class="box__check">
-                                        <i class="far fa-check-circle"></i>
+                                        <i class="fa-solid fa-circle-check"></i>
                                     </span>
                                 </div>
                             </div>
