erreur span corrigé

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p class="titres__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
             </div>
             <button class="button">
-                <span class="button__text">Explorer nos restaurants</>
+                <span class="button__text">Explorer nos restaurants</span>
             </button>
         </div>
 
