--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
 
-                <div class="step">
+                <div class="step step--color3">
                     <div class="step__content">
                         <div class="step__number">
                             <span class="number--three">3</span>
