coeur dans les menus

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -40,6 +40,7 @@
                     <h2 class="main--1__content__title">À la française</h2>
                     <span class="main--1__content__heart" id="heart--icon">
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart fa-heart-animated"></i>
                     </span>
                 </div>
 
