--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -39,6 +39,7 @@
                     <h3 class="main--1__content__title">Le délice des sens</h3>
                     <span class="main--1__content__heart" id="heart--icon">
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart fa-heart-animated"></i>
                     </span>
                 </div>
 
