--- a/Lapalettedugout.html
+++ b/Lapalettedugout.html
@@ -38,6 +38,7 @@
                     <h2 class="main--1__content__title">La palette du goût</h2>
                     <span class="main--1__content__heart" id="heart--icon">
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart fa-heart-animated"></i>
                     </span>
                 </div>
 
